--- a/style.css
+++ b/style.css
@@ -1,202 +1,513 @@
-/* Reset some default styling */
+@import url("https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;500;600;700;800&family=Tilt+Neon&display=swap");
+
+@property --gradient-angle {
+  syntax: "<angle>";
+  initial-value: 0deg;
+  inherits: false;
+}
+
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: "Nunito", sans-serif;
 }
 
-/* Basic styling */
-body {
-    font-family: Arial, sans-serif;
-    color: #333;
-    line-height: 1.6;
+html {
+  scroll-behavior: smooth;
 }
 
-header {
-    position: fixed;
-    top: 0;
-    width: 100%;
-    background-color: rgba(51, 51, 51, 0.8);
-    backdrop-filter: blur(10px);
-    z-index: 1000;
-    transition: background-color 0.3s ease;
+img {
+  width: 100%;
 }
 
-.navbar {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 1rem 5%;
+/* SECTION - HOME */
+
+.home {
+  display: grid;
+  grid-template-columns: 45% 50%;
+  place-items: center;
+  gap: 50px;
+  background: rgb(67, 69, 112);
+  background: radial-gradient(
+    circle,
+    rgba(67, 69, 112, 1) 3%,
+    rgba(35, 36, 57, 1) 60%
+  );
+  overflow: hidden;
+  padding: 130px 80px;
 }
 
-/* Background color change when scrolled */
-.navbar.scrolled {
-    background-color: #333; /* Adjust the color as needed */
+.description {
+  color: #fff;
+  padding: 0 50px;
 }
 
-.nav-list {
-    list-style: none;
-    display: flex;
-    gap: 2rem;
+.description > h1 {
+  font-family: "Tilt Neon", sans-serif;
+  font-size: 4rem;
+  line-height: 1;
+  margin-bottom: 30px;
 }
 
-.nav-link {
-    color: #fff;
-    text-decoration: none;
-    font-size: 1.2rem;
-    transition: color 0.3s ease;
+.gradient-text {
+  font-family: "Tilt Neon", sans-serif;
+  background-image: linear-gradient(
+    90deg,
+    rgb(118, 167, 63) 0%,
+    rgb(51, 143, 118) 40%,
+    rgb(55, 141, 167) 50%,
+    rgb(117, 152, 242) 70%,
+    rgb(144, 118, 236) 100%
+  );
+  color: transparent;
+  background-size: contain;
+  background-clip: text;
+  -webkit-background-clip: text;
 }
 
-/* Hover effect */
-.nav-link:hover {
-    color: #f39c12;
+.description > p {
+  font-family: "Nunito", sans-serif;
+  font-size: 1.2rem;
+  line-height: 1.5;
+  margin-bottom: 30px;
 }
 
-/* Scrolled effect */
-.navbar.scrolled {
-    background-color: #333;
-    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
+#form {
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
 }
 
-/* Hero Section */
-.hero {
-    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url() no-repeat center center/cover;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: #fff;
-    text-align: center;
+input {
+  padding-inline-end: 10px;
+  padding-inline-start: 10px;
+  background-color: transparent;
+  outline: transparent;
+  border: 0;
+  border-bottom: 2px solid rgba(255, 255, 255, 0.3);
+  margin-right: 10px;
+  transition: all 0.3s ease-in;
+  -webkit-transition: all 0.3s ease-in;
 }
 
-.hero-content {
-    max-width: 600px;
+input::placeholder {
+  color: rgb(117, 152, 242);
+  opacity: 0.5;
+  font-weight: 500;
 }
 
-.hero h1 {
-    font-size: 3rem;
-    margin-bottom: 1rem;
-    text-transform: uppercase;
+input[type="email"] {
+  color: rgba(255, 255, 255, 0.7);
+  font-weight: 500;
+  font-size: 1rem;
 }
 
-.hero p {
-    font-size: 1.2rem;
-    margin-bottom: 2rem;
+input[type="email"]:focus {
+  border: transparent;
+  outline: 2px dotted rgb(117, 152, 242);
+  outline-offset: -3px;
 }
 
-.cta-button {
-    padding: 0.8rem 2rem;
-    background-color: #f39c12;
-    color: #fff;
-    text-transform: uppercase;
-    font-weight: bold;
-    border-radius: 50px;
-    text-decoration: none;
-    transition: background-color 0.3s ease;
-    box-shadow: 0 0 5px yellow;
+.btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 3px;
+  max-width: max-content;
+  background: linear-gradient(
+    90deg,
+    rgb(118, 167, 63) 0%,
+    rgb(51, 143, 118) 40%,
+    rgb(55, 141, 167) 50%,
+    rgb(117, 152, 242) 70%,
+    rgb(144, 118, 236) 100%
+  );
+  background-size: 200%;
+  background-position: left;
+  color: #fff;
+  font-size: 1.2rem;
+  font-weight: 500;
+  border: 0;
+  padding: 12px 16px;
+  border-radius: 5px;
+  box-shadow: 0 6px 8px rgba(0, 0, 0, 0.5),
+    inset 0px 2px 2px rgba(255, 255, 255, 0.2);
+  cursor: pointer;
+  transition: all 0.3s ease-in;
 }
 
-.cta-button:hover {
-    background-color: #e67e22;
-    box-shadow: 0 0 5px yellow,
-    0 0 25px yellow, 0 0 50px yellow;
+.btn:is(:hover, :focus-visible) {
+  background-position: right;
 }
 
-
-/* Section styles */
-section {
-    padding: 100px 20px;
-    margin-top: 60px;
+.users-color-container {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+  gap: 20px;
 }
 
-#about,
-#services,
-#contact {
-    text-align: center;
-    padding: 50px 20px;
+.item {
+  max-width: 200px;
+  aspect-ratio: 1/1;
+  box-shadow: 0 8px 8px rgba(0, 0, 0, 0.5),
+    inset 0px 2px 2px rgba(255, 255, 255, 0.2);
 }
 
-#about h2,
-#services h2,
-#contact h2 {
-    font-size: 2rem;
-    margin-bottom: 1rem;
-    color: #333;
+.item:nth-child(1) {
+  background-color: #67d7e1;
+  border-radius: 50% 50% 0 50%;
 }
 
-#about p,
-#services p,
-#contact p {
-    font-size: 1.1rem;
-    color: #666;
+.item:nth-child(2) {
+  border-radius: 50% 50% 0 0;
 }
 
-/* Add some nice transitions */
-#about,
-#services,
-#contact {
+.item:nth-child(3) {
+  background-color: #6cc164;
+  border-radius: 50%;
+}
+
+.item:nth-child(4) {
+  border-radius: 0 0 0 50%;
+}
+
+.item:nth-child(5) {
+  border-radius: 0 50% 50% 0;
+}
+
+.item:nth-child(6) {
+  background-color: #8071a8;
+  border-radius: 0 50% 50% 50%;
+}
+
+.item:nth-child(7) {
+  border-radius: 50% 50% 0 50%;
+}
+
+.item:nth-child(8) {
+  background-color: #fe7519;
+  border-radius: 50% 0 0 50%;
+}
+
+.item:nth-child(9) {
+  background-color: #f5bec3;
+  border-radius: 0 50% 50% 0;
+}
+
+.item:nth-child(10) {
+  border-radius: 50%;
+}
+
+.item:nth-child(11) {
+  background-color: #fcd659;
+  border-radius: 50% 0 50% 50%;
+}
+
+.item:nth-child(12) {
+  border-radius: 50% 0 0 0;
+}
+
+.item {
+  animation: fadeIn 0.5s linear 1 forwards;
+  animation-delay: calc(0.2s * var(--i));
+}
+
+@keyframes fadeIn {
+  0% {
     opacity: 0;
-    transform: translateY(20px);
-    transition: opacity 0.6s ease-out, transform 0.6s ease-out;
-}
-
-#about.active,
-#services.active,
-#contact.active {
+    transform: scale(0);
+  }
+  100% {
     opacity: 1;
-    transform: translateY(0);
+    transform: scale(1);
+  }
 }
 
-/* Flexbox container styling */
-.flex-container {
-    display: flex;
-    justify-content: space-around;
-    align-items: flex-start;
-    padding: 50px 20px;
-    margin-top: 60px;
-    background-color: #f2f2f2;
-    flex-wrap: wrap;
+/* SECTION - CARD CONTAINER */
+
+.card-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 30px;
+  width: 100%;
+  min-height: 100vh;
+  background: rgb(67, 69, 112);
+  background: radial-gradient(
+    circle,
+    rgba(67, 69, 112, 1) 3%,
+    rgba(35, 36, 57, 1) 60%
+  );
+  overflow: hidden;
+  padding: 90px 50px;
 }
 
-/* Flexbox item styling */
-.flex-item {
-    background-color: #fff;
-    padding: 20px;
-    margin: 20px;
-    flex: 1 1 calc(33.333% - 40px);
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    border-radius: 10px;
-    transition: transform 0.3s ease, box-shadow 0.3s ease;
+.card {
+  max-width: 300px;
+  aspect-ratio: 3/5;
+  border-radius: 15px;
+  margin: 20px;
+  overflow: hidden;
+  border-top: 1px solid rgba(255, 255, 255, 0.7);
+  border-left: 1px solid rgba(255, 255, 255, 0.7);
+  box-shadow: 0 8px 10px rgba(0, 0, 0, 0.5),
+    inset 0px 2px 2px rgba(255, 255, 255, 0.2);
+  cursor: grab;
 }
 
-.flex-item h2 {
-    font-size: 1.8rem;
-    margin-bottom: 15px;
-    color: #333;
-    text-align: center;
+.content {
+  position: relative;
+  display: grid;
+  place-items: center;
+  grid-template-columns: 1fr;
+  grid-template-rows: repeat(10, 1fr);
+  padding: 20px;
+  background: rgba(104, 104, 104, 0.5);
 }
 
-.flex-item p {
+.content::before,
+.content::after {
+  content: "";
+  position: absolute;
+  inset: 0;
+  z-index: -1;
+  border-radius: inherit;
+  background: conic-gradient(
+    from var(--gradient-angle),
+    rgb(109, 186, 22),
+    rgb(30, 119, 95),
+    rgb(55, 141, 167),
+    rgb(59, 91, 174),
+    rgb(144, 118, 236),
+    rgb(59, 91, 174),
+    rgb(55, 141, 167),
+    rgb(30, 119, 95),
+    rgb(109, 186, 22)
+  );
+  animation: rotation 8s linear infinite;
+}
+
+.content::after {
+  filter: blur(30px);
+}
+
+@keyframes rotation {
+  0% {
+    --gradient-angle: 0deg;
+  }
+  100% {
+    --gradient-angle: 360deg;
+  }
+}
+
+.content img {
+  aspect-ratio: 3/2;
+  border-radius: 10px;
+  grid-row: 1 / 5;
+  margin-bottom: 20px;
+  user-select: none;
+  object-fit: cover;
+  box-shadow: 0 3px 10px rgba(0, 0, 0, 0.5);
+}
+
+.content h1 {
+  font-size: 1.2rem;
+  color: #fff;
+  text-align: center;
+  grid-row: 5 / 6;
+  user-select: none;
+}
+
+.content p {
+  font-size: 1rem;
+  font-weight: 400;
+  color: #fff;
+  grid-row: 6 / 9;
+  user-select: none;
+}
+
+.btn-grad {
+  background-image: linear-gradient(
+    to right,
+    #ece9e6 0%,
+    #ffffff 51%,
+    #ece9e6 100%
+  );
+  padding: 10px 16px;
+  color: #000;
+  box-shadow: 0 0 5px #eee;
+  outline: 0;
+  font-size: 1rem;
+  font-weight: 400;
+  grid-row: 9 / 10;
+  cursor: pointer;
+  transition: all 0.5s ease-in;
+}
+
+.btn-grad:is(:hover, :focus-visible) {
+  text-decoration: none;
+}
+
+.control {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  list-style: none;
+  gap: 14px;
+}
+
+.control li {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: linear-gradient(to bottom, #559b9a, #3b3d8a);
+  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.5),
+    inset 0px 4px 4px rgba(255, 255, 255, 0.2);
+  padding: 16px;
+  border-radius: 50%;
+  cursor: pointer;
+  transform: scale(1);
+}
+
+.control li::before {
+  position: absolute;
+  content: "";
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background: linear-gradient(to right, #559b9a, #3b3d8a);
+  border-radius: 50%;
+  z-index: -1;
+  transition: all 0.5s ease-in;
+  opacity: 0;
+}
+
+.control li:hover::before {
+  opacity: 1;
+}
+
+.arrow {
+  font-size: 1.5rem;
+  color: #fff;
+}
+
+@media (max-width: 1215px) {
+  .description > h1 {
+    font-size: 3rem;
+  }
+
+  .description > p {
     font-size: 1rem;
-    color: #666;
-    text-align: justify;
+  }
+
+  .btn {
+    font-size: 1rem;
+  }
 }
 
-/* Hover effect on flex items */
-.flex-item:hover {
-    transform: translateY(-10px);
-    box-shadow: 0 6px 15px rgba(0, 0, 0, 0.2);
+@media (max-width: 1015px) {
+  .description > h1 {
+    font-size: 2.5rem;
+  }
+
+  .description > p {
+    font-size: 1rem;
+  }
+
+  .btn {
+    padding: 8px 12px;
+  }
+
+  .btn-grad {
+    padding: 8px 12px;
+  }
 }
 
-/* Responsive design */
-@media (max-width: 1024px) {
-    .flex-item {
-        flex: 1 1 calc(45% - 40px);
-    }
+@media (max-width: 1015px) {
+  .home {
+    grid-template-columns: 45% 50%;
+    gap: 50px;
+    padding: 140px 50px;
+  }
 }
 
-@media (max-width: 768px) {
-    .flex-item {
-        flex: 1 1 calc(100% - 40px);
-    }
+@media (max-width: 865px) {
+  .home {
+    grid-template-columns: 45% 50%;
+    gap: 60px;
+    padding: 130px 70px;
+  }
 }
+
+@media (max-width: 815px) {
+  .home {
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr;
+    grid-template-areas:
+      "userscolorcontainer"
+      "description";
+    gap: 30px;
+    padding: 90px 80px 70px;
+  }
+
+  .users-color-container {
+    grid-area: userscolorcontainer;
+  }
+
+  .description {
+    grid-area: description;
+    padding: 0;
+    text-align: center;
+  }
+
+  .description > h1 {
+    font-size: 3.5rem;
+  }
+
+  .description > p {
+    font-size: 1.1rem;
+  }
+
+  #form {
+    justify-content: center;
+  }
+}
+
+@media (max-width: 815px) {
+  .description > h1 {
+    font-size: 2.7rem;
+    text-align: center;
+  }
+
+  .description > p {
+    font-size: 1rem;
+  }
+}
+
+@media (max-width: 460px) {
+    .home {
+    gap: 0;
+    padding: 30px 40px;
+  }
+  
+  #form {
+    flex-direction: column;
+    align-items: center;
+    gap: 30px;
+    margin-top: 20px;
+  }
+  
+  input[type="email"]:focus {
+    outline-offset: 6px;
+  }
+
+}
+
+
